Refactor "initFramework" for fix intelliJ code analysis suggestions